css alignment tweaks, and fixed refresh at end

--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,8 @@ ul {
     color: darkgray;
     width: 125px;
     height: 60px;
-    float: left;
+    display: inline-block;
+    vertical-align: top;
     margin: 10px;
     padding: 10px;
     border-radius: 3px;
@@ -39,6 +40,7 @@ ul {
     text-align: center;
     margin: 15px;
     display: inline-block;
+    vertical-align: top;
     width: 350px;
     height: 425px;
 }
@@ -81,9 +83,12 @@ h2 {
 }
 
 #recipeSubmit {
+    display: block;
     width: 250px;
     height: 50px;
     margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
     clear: both;
 }
 
@@ -108,7 +113,9 @@ h2 {
 }
 
 #produceSection {
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
     text-align: center;
 }
 
